--- a/templates/post_list.html
+++ b/templates/post_list.html
@@ -13,5 +13,5 @@
 {% endfor %}
 
 
-<h2><a href="{% url 'post_create' %}">INGRESA AQUI!</a></h2>
+<h2><a href="{% url 'post_create' %}">Crear Post</a></h2>
 
