--- a/templates/post_list.html
+++ b/templates/post_list.html
@@ -1,4 +1,5 @@
-
+{% extends "includes/navbar.html" %}
+{% block content %}
 <!-- por defecto es objet_list -->
 {% for publicacion in object_list %}
 
@@ -14,4 +15,6 @@
 
 
 <h2><a href="{% url 'post_create' %}">Crear Post</a></h2>
+
+{% endblock %}
 
