--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -1,10 +1,14 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Iniciar Sesión</title>
+    <link rel="stylesheet" href="{% static 'css/login.css' %}">
 </head>
+
 <body>
     <div class="login-container">
         <h1>Iniciar Sesión</h1>
